# rust-bitcoincore-rpc

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  todo.md
.github/workflows/: README.md  rust.yml  test.yml  tests.yml  unit-tests.yml
client/: CHANGELOG.md  Cargo.toml  README.md
client/contrib/: extra_test.sh
client/examples/: batching.rs  connect_to_masternode.rs  regtest.rs  retry_client.rs  test_against_node.rs
client/src/: async_client.rs  batch.rs  client.rs  error.rs  jsonrpc.rs  lib.rs  params.rs  queryable.rs  requests.rs  serialize.rs  sync_client.rs  util.rs
client/tests/: integration.rs
contrib/: crates.sh  integration_test.sh  run_task.sh  test.sh
examples/: test_against_node.rs
integration_test/: .env.example  .gitignore  Cargo.toml  dash.conf.sample  run.sh  test_all.sh
integration_test/src/: main.rs
json/: Cargo.toml  README.md
json/integration_test/jsonrpc-client/: Cargo.toml  run.sh
json/integration_test/jsonrpc-client/src/: lib.rs  main.rs  v22.rs
json/src/: getters.rs  lib.rs
rpc/: Cargo.toml
rpc/src/: http.rs  lib.rs  rpc.rs
src/: client.rs  error.rs  getters.rs  lib.rs  queryable.rs  types.rs
usage_examples/: Cargo.toml
usage_examples/src/: main.rs
