[workspace]

members = [
    "json",
    "client",
    "integration_test",
]

[patch.crates-io.base58check]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/base58"

[patch.crates-io.bitcoin]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/bitcoin"

[patch.crates-io.bitcoin_hashes]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/hashes"

[patch.crates-io.bitcoin-internals]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/internals"

[patch.crates-io.bitcoin-io]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/io"

[patch.crates-io.bitcoin-units]
path = "/home/tobin/build/github.com/tcharding/rust-bitcoin/release/units"
