[package]
name = "bitcoincore-rpc"
version = "0.18.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Tobin C. Harding <me@tobin.cc>",
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[features]
verifymessage = ["bitcoincore-rpc-json/verifymessage"]
rand = ["bitcoincore-rpc-json/rand"]

[dependencies]
bitcoincore-rpc-json = { version = "0.18.0", path = "../json" }

log = "0.4.5"
jsonrpc = { version = "0.18.0", features = ["minreq_http"] }

# Used for deserialization of JSON.
serde = "1.0.156"
serde_json = "1.0.96"

[dev-dependencies]
tempfile = "3.6.0"

[[example]]
name = "retry_client"
required-features = ["verifymessage"]

[[example]]
name = "test_against_node"
required-features = []
