[package]
name = "bitcoinsv-rpc"
version = "1.0.2"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>"
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/rust-bitcoinsv-rpc/"
repository = "https://github.com/Danconnolly/rust-bitcoinsv-rpc/"
description = "RPC client library for the Bitcoin SV JSON-RPC API."
keywords = ["bitcoin-sv", "rpc"]
readme = "README.md"
edition = "2021"

[lib]
name = "bitcoinsv_rpc"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.75"
bitcoinsv = "0.2.7"
bitcoinsv-rpc-json = { version = "1.0.2" }
hex = "0.4.3"
jsonrpc = { version = "0.16.0", features = ["minreq_http"]}
log = "0.4.5"
serde = "1"
serde_json = "1"
tokio = { version = ">=1.23.1", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
tempfile = "3.3.0"

