[package]
name = "bitcoinsv-rpc-json"
version = "0.19.1"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>",
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/rust-bitcoinsv-rpc/"
repository = "https://github.com/Danconnolly/rust-bitcoinsv-rpc/"
description = "JSON-enabled type structs for bitcoinsv-rpc crate."
keywords = [ "bitcoin-sv", "rpc" ]
readme = "README.md"
edition = "2021"

[lib]
name = "bitcoinsv_rpc_json"
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
bitcoinsv = "0.2.2"

[dev-dependencies]
approx = "0.5"
