[package]
name = "bitcoincore-rpc-json"
version = "0.19.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "JSON-enabled type structs for bitcoincore-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "bitcoincore_rpc_json"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["bitcoin/rand-std"]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

bitcoin = { version = "0.32.0", features = ["serde"] }
