[package]
name = "bitcoincore-rpc-rpc"
version = "0.13.0"
authors = ["Jeffrey Czyz", "Matt Corallo", "Sergi Delgado"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc" ]
readme = "README.md"
edition = "2018"

[lib]
name = "bitcoincore_rpc_rpc"
path = "src/lib.rs"


[dependencies]
bitcoin = "0.26"
chunked_transfer = { version = "1.4" }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }


[dev-dependencies]
tokio = { version = "1.0", features = [ "macros", "rt" ] }