[package]
name = "integration-test"
version = "0.1.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc-json = { path = "../.." }

anyhow = "1"
jsonrpc_client = { version = "0.7", features = ["reqwest"] }
reqwest = "0.11"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }

# Prevent this from interfering with workspaces.
[workspace]
members = ["."]
